* add some vm options tests